Mis en formes MVC +correction des problèmes.